Support for UDTs, tuples, and collections in UDFs
Patch by Robert Stupp; reviewed by Tyler Hobbs for CASSANDRA-7563